# olmanager

./: .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHAMPION_IMAGES.md  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  LOL_SIM_V2_REFACTOR_GUIDE.md  MAINTAINERS.md  README.md  ROADMAP.md  SESSION-HANDOFF.md  _meta.json  components.json  docker-compose.prod.yml  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  pr_body.txt  vite.config.ts
docs/: README.md  (+49 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/db/: Cargo.toml
src-tauri/crates/db/src/: game_database.rs  game_persistence.rs  legacy_migration.rs  lib.rs  migrations.rs  save_index.rs  save_index_manager.rs  save_manager.rs
src-tauri/crates/db/tests/: academy_team_persistence.rs
src-tauri/crates/domain/: Cargo.toml
src-tauri/crates/domain/src/: champion.rs  champion_stats.rs  identity.rs  league.rs  lib.rs  manager.rs  message.rs  negotiation.rs  news.rs  player.rs  season.rs  serde_util.rs  social.rs  staff.rs  stats.rs  team.rs  transfer_history.rs
src-tauri/crates/engine/src/: event.rs  lib.rs  report.rs  shared.rs  types.rs
src-tauri/crates/engine/tests/: live_match_tests.rs  simulation_tests.rs
src-tauri/crates/ofm_core/: Cargo.toml
src-tauri/crates/ofm_core/src/: academy.rs  board_objectives.rs  champions.rs  clock.rs  commands.rs  competitions.rs  contract_wage_policy.rs  contracts.rs  end_of_season.rs  finances.rs  firing.rs  game.rs  game_setup.rs  identity_upgrade.rs  job_offers.rs  lib.rs  live_match_manager.rs  messages.rs  player_identity.rs  player_rating.rs  potential.rs  schedule.rs  scouting.rs  scrim_flow.rs  season_awards.rs  season_context.rs  social.rs  social_match_templates.json  social_registry.rs  social_templates.rs  staff_effects.rs  state.rs  training.rs  transfers.rs
src-tauri/crates/ofm_core/tests/: contracts_tests.rs  end_of_season_tests.rs  finances_tests.rs  live_match_manager_tests.rs  messages_tests.rs  multileague_tests.rs  player_events_tests.rs  random_events_tests.rs  scouting_tests.rs  scrim_flow_tests.rs  training_tests.rs  transfers_tests.rs  turn_tests.rs
src-tauri/crates/olm_core/: Cargo.toml
src-tauri/crates/olm_core/src/: academy.rs  ai_player_agent.rs  ai_team_agent.rs  board_objectives.rs  champions.rs  club.rs  commands.rs  competitions.rs  contract_wage_policy.rs  contracts.rs  debug.rs  delegated_renewals.rs  dispatch.rs  end_of_season.rs  finances.rs  firing.rs  game.rs  game_setup.rs  identity_upgrade.rs  job_offers.rs  lib.rs  live_match_manager.rs  messages.rs  news.rs  player_identity.rs  player_rating.rs  potential.rs  roster_stability.rs  schedule.rs  scouting.rs  season_awards.rs  season_context.rs  sim_live.rs  sim_live_bridge.rs  social.rs  social_data.rs  social_match_templates.json  social_registry.rs  social_templates.rs  staff_effects.rs  (+5 more)
src-tauri/crates/olm_core/tests/: academy_tests.rs  ai_signing_policy_tests.rs  club_tests.rs  contracts_tests.rs  end_of_season_tests.rs  finances_tests.rs  lifecycle_stability_tests.rs  live_match_manager_tests.rs  messages_tests.rs  multileague_tests.rs  narrative_media_events.rs  narrative_news.rs  narrative_player_conversations.rs  narrative_registry.rs  player_events_tests.rs  random_events_tests.rs  roster_stability_tests.rs  scouting_tests.rs  scrim_flow_tests.rs  training_tests.rs  transfers_tests.rs  turn_strategic_recruitment_tests.rs  turn_tests.rs
src-tauri/crates/server/: Cargo.toml
src-tauri/crates/server/src/: auth.rs  commands.rs  data.rs  import.rs  main.rs  sim.rs  store.rs  time_blockers.rs
src-tauri/data/: default_teams.json
src-tauri/databases/: lec_world.json  world.json
src-tauri/src/: discord_rpc.rs  error.rs  lib.rs  main.rs
src-tauri/src/application/: live_match.rs  lol_sim_v2.rs  mod.rs  sim_live.rs  team_talk.rs  time_advancement.rs  time_blockers.rs
src-tauri/src/application/game_setup/: avatar.rs
src-tauri/src/application/lol_sim_v2/: api.rs  combat.rs  combat_tests.rs  decision_layer.rs  decision_layer_tests.rs  economy.rs  events.rs  layout.rs  macro_ai.rs  macro_ai_tests.rs  minions.rs  objectives.rs  objectives_tests.rs  pathing.rs  runtime.rs  runtime_tests.rs  session.rs  state_init.rs  structures.rs  structures_tests.rs  test_helpers.rs  trading.rs  types.rs  ultimate_identity.rs  util.rs  vision.rs  vision_tests.rs  waves.rs
src-tauri/src/application/lol_sim_v3/: README.md  agents.rs  api.rs  events.rs  intentions.rs  map_data.rs  mod.rs  runtime.rs  session.rs  snapshot.rs  state.rs  systems.rs  tests.rs
src-tauri/src/commands/: academy.rs  bug_report.rs  champion.rs  champion_stats.rs  club.rs  competitions.rs  contracts.rs  debug.rs  discord.rs  game.rs  import.rs  jobs.rs  live_match.rs  lol_sim_v2.rs  lol_sim_v3.rs  messages.rs  mod.rs  round_summary.rs  season.rs  settings.rs  sim_live.rs  social.rs  squad.rs  staff.rs  time.rs  transfers.rs  world.rs
(+1699 files in other folders)
