[package]
name = "openleaguemanager"
version = "0.3.4"
description = "Open League Manager"
authors = ["KOI Noboris Development Team <noboriskoi@gmail.com>"]
repository = "https://github.com/OpenLeagueManager/OLManager"
edition = "2021"
default-run = "openleaguemanager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "olmanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[workspace]
members = ["crates/olm_core", "crates/server"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
log = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
olm_core = { path = "crates/olm_core" }
chrono = "0.4.44"
rand = "0.10"
base64 = "0.22"
zip = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["time"] }
dirs = "6"
thiserror = "2"
validator = { version = "0.19", features = ["derive"] }
ts-rs = { version = "10", optional = true, features = ["serde-compat"] }

[features]
typescript = ["ts-rs", "olm_core/typescript"]
