[package]
name = "olm_core"
version = "0.1.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
log = "0.4"
rand = "0.10"
rand_08 = { version = "0.8", package = "rand" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.21.0", features = ["v4"] }
ts-rs = { version = "10", optional = true, features = ["serde-compat", "chrono"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
rusqlite_migration = "1.3"
bincode = "1.3"

[dev-dependencies]
tempfile = "3"

[features]
typescript = ["ts-rs"]

