[package]
name = "olmanager-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "olmanager-server"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
ofm_core = { path = "../ofm_core" }
engine = { path = "../engine" }
db = { path = "../db" }

axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Persistence (Postgres / Supabase)
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "uuid",
  "chrono",
] }

# Auth (verify Supabase ES256 JWTs against the project JWKS)
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
